[project]
name = "nse-sentiment-analyzer"
version = "2.9.0"
description = "Multi-source NSE stock sentiment analysis with SmartScore and technical indicators"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that hit real APIs (yfinance, RSS) — not run by default",
    "regression: tests for previously-fixed bugs",
]

[tool.coverage.run]
source = ["sentiment", "indicators", "data_fetcher", "persistence", "render", "market_data"]
omit = ["tests/*", "app.py"]
